[package]
name = "sdmm"
description = "Simple and Wweet Stardew Valley Mod Manager"
version = "0.1.0"
edition = "2021"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version="0.18.0", features=["persistence"]}
reqwest = "0.11.11"
interprocess = "1.1.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
