[package]
name = "sdmm"
description = "Simple and Sweet Stardew Valley Mod Manager"
version = "0.2.0"
edition = "2021"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true

[dependencies]
eframe = {version="0.18.0", features=["persistence"]}
egui_extras = "0.18.0"
# Only select needed features later
tokio = {version="1.20.0", default-features=false}
reqwest = {version="0.11.11", features=["json", "stream", "blocking"]}
interprocess = "1.1.1"
serde = {version="1.0.138", features=["derive"]}
serde_json = "1.0"
directories-next = "2.0.0"
futures-util = "0.3.21"
zip = "0.6.2"
rfd = "0.10.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
